Fixes radio button and checkbox alignment

--- a/manon/checkbox.scss
+++ b/manon/checkbox.scss
@@ -36,6 +36,8 @@ form {
     &.required {
       flex-direction: column;
       gap: var(--checkbox-required-gap);
+      align-items: flex-start;
+      justify-content: var(--checkbox-align-items);
 
       > div {
         padding: 0;
