--- a/manon/radio.scss
+++ b/manon/radio.scss
@@ -36,8 +36,8 @@ form {
     &.required {
       flex-direction: column;
       gap: var(--radio-required-gap);
-      align-items: flex-start;
-      justify-content: var(--radio-align-items);
+      align-items: var(--radio-align-items);
+      justify-content: var(--radio-justify-content);
 
       > div {
         padding: 0;
